adding bcrypt
