# src/models/users.js
@@ -1,0 +1,31 @@
+"use strict";
+const { Model } = require("sequelize");
+module.exports = (sequelize, DataTypes) => {
+	class Users extends Model {
+		/**
+		 * Helper method for defining associations.
+		 * This method is not a part of Sequelize lifecycle.
+		 * The `models/index` file will call this method automatically.
+		 */
+		static associate(models) {
+			// define association here
+		}
+	}
+	Users.init(
+		{
+			first_name: DataTypes.STRING,
+			last_name: DataTypes.STRING,
+			email: DataTypes.STRING,
+			password: DataTypes.STRING,
+			reset_token: DataTypes.STRING,
+			active: DataTypes.BOOLEAN,
+		},
+		{
+			sequelize,
+			modelName: "Users",
+			underscored: true,
+			tableName: "users",
+		}
+	);
+	return users;
+};
